fix(post buttons): shift post buttons left

--- a/style/modules/content/_sitetable.scss
+++ b/style/modules/content/_sitetable.scss
@@ -263,11 +263,13 @@
 .expando-button ~ .tagline {
 	position: relative;
 	left: em(2, 12);
-	top: em(8, 12);
+	top: em(9, 12);
 }
 
 .flat-list.buttons {
 	clear: left;
+	left: em(-1, 12);
+	position: relative;
 }
 
 // nsfw stamp
